<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/event_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/lightGrey"
                    android:contentDescription="@string/event_image"
                    android:scaleType="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.29" />

                <ProgressBar
                    android:id="@+id/image_progress_bar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="@id/event_image"
                    app:layout_constraintEnd_toEndOf="@id/event_image"
                    app:layout_constraintStart_toStartOf="@id/event_image"
                    app:layout_constraintTop_toTopOf="@id/event_image" />

                <TextView
                    android:id="@+id/eventTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="7dp"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/event_name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/event_image"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/eventDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="7dp"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/jan_21"
                    android:textColor="@color/grey"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/event_image"
                    app:layout_constraintTop_toBottomOf="@+id/eventTitle" />

                <TextView
                    android:id="@+id/eventLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="7dp"
                    android:layout_marginTop="3dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/webster_hall"
                    android:textColor="@color/grey"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/event_image"
                    app:layout_constraintTop_toBottomOf="@+id/eventDate" />

                <TextView
                    android:id="@+id/eventCity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="7dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/new_york"
                    android:textColor="@color/grey"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/event_image"
                    app:layout_constraintTop_toBottomOf="@+id/eventLocation" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>